[gd_scene load_steps=11 format=1]

[ext_resource path="res://assets/Personagem/parada/asesprite/parada.png" type="Texture" id=1]
[ext_resource path="res://assets/Personagem/parada/asesprite/parada1.png" type="Texture" id=2]
[ext_resource path="res://assets/Personagem/parada/asesprite/parada3.png" type="Texture" id=3]
[ext_resource path="res://assets/baloon.png" type="Texture" id=4]
[ext_resource path="res://fonts/npcFont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://scripts/NPC.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30.4631, 15.5931 )

[sub_resource type="Animation" id=3]

resource/name = "popup"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -22.5 ), Vector2( 0, -45 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.166667 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "popup"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -45 ), Vector2( -8, -22.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.166667 ) ]
}

[node name="NPC" type="Node2D"]

transform/scale = Vector2( 3, 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"
playing = true

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="baloon" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -8, -22.5 )
transform/scale = Vector2( 0.1, 0.166667 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="baloon"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -64.0
margin/top = -18.0
margin/right = 64.0
margin/bottom = 9.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
script/script = ExtResource( 6 )

[node name="Anim" type="AnimationPlayer" parent="baloon/RichTextLabel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/popup = SubResource( 3 )
"anims/popup (copy)" = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[connection signal="body_enter" from="Area2D" to="baloon/RichTextLabel" method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="baloon/RichTextLabel" method="_on_Area2D_body_exit"]

[connection signal="timeout" from="Timer" to="baloon/RichTextLabel" method="_on_Timer_timeout"]


